# ChangeLog for media-sound/hydrogen
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/hydrogen/ChangeLog,v 1.58 2007/11/18 20:04:51 aballier Exp $

  18 Nov 2007; Alexis Ballier <aballier@gentoo.org>
  -files/hydrogen-0.9.0-asneeded.patch, -hydrogen-0.9.0.ebuild,
  -hydrogen-0.9.1.ebuild, -hydrogen-0.9.2.ebuild, -hydrogen-0.9.3.ebuild,
  -hydrogen-0.9.3-r1.ebuild:
  remove old

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org> hydrogen-0.9.3-r2.ebuild:
  sparc stable, thanks to Alex Maclean for testing

  13 Oct 2007; Markus Rothe <corsair@gentoo.org> hydrogen-0.9.3-r2.ebuild:
  Stable on ppc64; bug #191278

  23 Sep 2007; Christoph Mende <angelos@gentoo.org>
  hydrogen-0.9.3-r2.ebuild:
  Stable on amd64 wrt bug #191278

  08 Sep 2007; nixnut <nixnut@gentoo.org> hydrogen-0.9.3-r2.ebuild:
  Stable on ppc wrt bug 191278

  04 Sep 2007; Jurek Bartuszek <jurek@gentoo.org> hydrogen-0.9.3-r2.ebuild:
  x86 stable (bug #191278)

  09 Jul 2007; Alexis Ballier <aballier@gentoo.org>
  hydrogen-0.9.3-r2.ebuild:
  no need to rdepend on docbook-sgml-utils

*hydrogen-0.9.3-r2 (09 Jul 2007)

  09 Jul 2007; Alexis Ballier <aballier@gentoo.org>
  +files/hydrogen-0.9.3-automagic.patch,
  +files/hydrogen-0.9.3-desktop-noexec.patch, +hydrogen-0.9.3-r2.ebuild:
  Call only once the autotools with eautoreconf, do not install destop entry
  as executable (reported by Josh Saddler), fix automagic on portaudio,
  regenerate doc with doc useflag, make flac optional, parallel make appears
  to work thus drop -j1, add missing dep for docbook2html when regenerating
  doc

  06 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  hydrogen-0.9.3-r1.ebuild:
  Add a pkg_setup check for midi USE flag in alsa-lib.

  02 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Hand to newly-born proaudio herd.

  17 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> hydrogen-0.9.2.ebuild,
  hydrogen-0.9.3.ebuild, hydrogen-0.9.3-r1.ebuild: